[package]
name = "reic-server"
version = "0.1.0"
authors = ["Dennis Duda <git@seri.tools>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reic-core = { path = "../reic-core" }
reic-proto-gen = { path = "../reic-proto-gen" }

sled = "0.31"

serde = { version = "1.0", features = ["derive"] }

tokio = { version = "0.2", features = ["rt-threaded", "stream", "sync", "time", "macros", "parking_lot", "blocking"] }

futures-core = "0.3"
futures-util = "0.3"
tonic = "0.2.0"
prost = "0.6"
rand = "0.7"